sentence correction updated

--- a/Word_Auto_Correct/Word_Auto_Correct_Notebook.ipynb
+++ b/Word_Auto_Correct/Word_Auto_Correct_Notebook.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 88,
    "id": "2075842a",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 89,
    "id": "321ca483",
    "metadata": {},
    "outputs": [],
@@ -55,17 +55,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 90,
    "id": "4004bf5c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6314\n"
+       "6315\n"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 91,
    "id": "a91e2064",
    "metadata": {},
    "outputs": [],
@@ -89,8 +89,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
-   "id": "00fc0e0e",
+   "execution_count": 92,
+   "id": "286c60e3",
    "metadata": {},
    "outputs": [
     {
@@ -98,30 +98,30 @@
       "text/plain": [
        "word     | prob        \n",
        "---------| ------------\n",
-       "o        | 0.02486538  \n",
-       "for      | 0.07491289  \n",
-       "a        | 0.118942    \n",
-       "muse     | 0.002850808 \n",
-       "of       | 0.172949    \n",
-       "fire     | 0.003484321 \n",
-       "that     | 0.1240101   \n",
-       "would    | 0.02169781  \n",
-       "ascend   | 0.0001583782\n",
-       "the      | 0.2408933   \n",
-       "brightest| 0.0003167564\n",
-       "heaven   | 0.007602154 \n",
-       "invention| 0.001425404 \n",
-       "kingdom  | 0.0009502692\n",
-       "stage    | 0.0004751346\n",
-       "princes  | 0.0006335128\n",
-       "to       | 0.1837187   \n",
-       "act      | 0.005543237 \n",
-       "and      | 0.2207792   \n",
-       "monarchs | 0.0003167564\n",
+       "o        | 0.02486144  \n",
+       "for      | 0.07490103  \n",
+       "a        | 0.1189232   \n",
+       "muse     | 0.002850356 \n",
+       "of       | 0.1729216   \n",
+       "fire     | 0.003483769 \n",
+       "that     | 0.1239905   \n",
+       "would    | 0.02169438  \n",
+       "ascend   | 0.0001583531\n",
+       "the      | 0.2408551   \n",
+       "brightest| 0.0003167063\n",
+       "heaven   | 0.00760095  \n",
+       "invention| 0.001425178 \n",
+       "kingdom  | 0.0009501188\n",
+       "stage    | 0.0004750594\n",
+       "princes  | 0.0006334125\n",
+       "to       | 0.1836896   \n",
+       "act      | 0.005542359 \n",
+       "and      | 0.2207443   \n",
+       "monarchs | 0.0003167063\n",
        "..\n"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 93,
    "id": "f4391c68",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 94,
    "id": "3cef6421",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
        "\"can\"\n"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,8 +195,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
-   "id": "d95a6adf",
+   "execution_count": 95,
+   "id": "25341623",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        ",\"a\"\n"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 96,
    "id": "79ae5e74",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 97,
    "id": "935244e8",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "\"eat\"\n"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 98,
    "id": "bd83b0c2",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
        "\"senthli\"\n"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 99,
    "id": "d83c3a42",
    "metadata": {},
    "outputs": [],
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 100,
    "id": "86be10a5",
    "metadata": {},
    "outputs": [],
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 101,
    "id": "f73cb4bd",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
        "..\n"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 102,
    "id": "5c917d02",
    "metadata": {},
    "outputs": [
@@ -370,7 +370,7 @@
        "50\n"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f83f3c99",
+   "id": "b774ae8f",
    "metadata": {},
    "source": [
     "<a name='ex-7'></a>\n",
@@ -392,8 +392,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
-   "id": "7898271f",
+   "execution_count": 103,
+   "id": "476f28ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,8 +402,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "id": "754e4275",
+   "execution_count": 104,
+   "id": "8cb5eab3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,8 +413,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "id": "7f61cbb0",
+   "execution_count": 105,
+   "id": "93c16a97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,8 +424,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
-   "id": "2f2b6a18",
+   "execution_count": 106,
+   "id": "0a75a61c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,8 +435,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
-   "id": "652701dd",
+   "execution_count": 107,
+   "id": "5b1d745d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,8 +454,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
-   "id": "946a207f",
+   "execution_count": 108,
+   "id": "190613f4",
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
        "..\n"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,8 +497,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
-   "id": "7e5df029",
+   "execution_count": 109,
+   "id": "fec8f099",
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
        "51\n"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c66c6162",
+   "id": "ff5a922b",
    "metadata": {},
    "source": [
     "<a name='3'></a>\n",
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84357141",
+   "id": "dd8a07c1",
    "metadata": {},
    "source": [
     "<a name='3-1'></a>\n",
@@ -543,8 +543,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
-   "id": "47569e28",
+   "execution_count": 110,
+   "id": "4e057128",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,8 +561,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "id": "4247042a",
+   "execution_count": 111,
+   "id": "9ad7ecda",
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
        "106\n"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,8 +582,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
-   "id": "760937d6",
+   "execution_count": 112,
+   "id": "283e665b",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
        "51\n"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff96ff18",
+   "id": "82a8499a",
    "metadata": {},
    "source": [
     "<a name='3-2'></a>\n",
@@ -617,12 +617,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
-   "id": "5e3c44fb",
+   "execution_count": 161,
+   "id": "2371f295",
    "metadata": {},
    "outputs": [],
    "source": [
     "edit_two_letters:{[x;f]\n",
+    "    ittr1:distinct(edit_one_letter[x;f]);\n",
+    "    ittr2:edit_one_letter'[ittr1;]f;\n",
+    "    :(ittr1 union (asc distinct (raze ittr2)) )except enlist\"\"\n",
+    "    }\n",
+    "\n",
+    "/it return only non-dictionary word\n",
+    "edit_two_letters_1:{[x;f]\n",
+    "    if[(`$x) in (key probs);:x];\n",
     "    ittr1:distinct(edit_one_letter[x;f]);\n",
     "    ittr2:edit_one_letter'[ittr1;]f;\n",
     "    :(ittr1 union (asc distinct (raze ittr2)) )except enlist\"\"\n",
@@ -631,8 +639,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
-   "id": "3081af2c",
+   "execution_count": 163,
+   "id": "4d7189f0",
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +671,7 @@
        "..\n"
       ]
      },
-     "execution_count": 285,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,28 +682,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
-   "id": "b6da8495",
+   "execution_count": 164,
+   "id": "32ddf18f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2028\n"
+       "\"a\"\n"
       ]
      },
-     "execution_count": 283,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "count edit_two_letters[\"a\";1b]"
+    "edit_two_letters_1[\"a\";1b]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "40f3365f",
+   "id": "783cb1ee",
    "metadata": {},
    "source": [
     "<a name='3-3'></a>\n",
@@ -718,39 +726,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
-   "id": "7bbbe5f7",
+   "execution_count": 116,
+   "id": "8ec0a2f8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "o        | 0.02486538\n",
-       "for      | 0.07491289\n",
-       "a        | 0.118942\n",
-       "muse     | 0.002850808\n",
-       "of       | 0.172949\n",
-       "fire     | 0.003484321\n",
-       "that     | 0.1240101\n",
-       "would    | 0.02169781\n",
-       "ascend   | 0.0001583782\n",
-       "the      | 0.2408933\n",
-       "brightest| 0.0003167564\n",
-       "heaven   | 0.007602154\n",
-       "invention| 0.001425404\n",
-       "kingdom  | 0.0009502692\n",
-       "stage    | 0.0004751346\n",
-       "princes  | 0.0006335128\n",
-       "to       | 0.1837187\n",
-       "act      | 0.005543237\n",
-       "and      | 0.2207792\n",
-       "monarchs | 0.0003167564\n",
-       "behold   | 0.002058917\n",
-       "swelling | 0.0001583782\n",
+       "o        | 0.02486144\n",
+       "for      | 0.07490103\n",
+       "a        | 0.1189232\n",
+       "muse     | 0.002850356\n",
+       "of       | 0.1729216\n",
+       "fire     | 0.003483769\n",
+       "that     | 0.1239905\n",
+       "would    | 0.02169438\n",
+       "ascend   | 0.0001583531\n",
+       "the      | 0.2408551\n",
+       "brightest| 0.0003167063\n",
+       "heaven   | 0.00760095\n",
+       "invention| 0.001425178\n",
+       "kingdom  | 0.0009501188\n",
+       "stage    | 0.0004750594\n",
+       "princes  | 0.0006334125\n",
+       "to       | 0.1836896\n",
+       "act      | 0.005542359\n",
+       "and      | 0.2207443\n",
+       "monarchs | 0.0003167063\n",
+       "behold   | 0.002058591\n",
+       "swelling | 0.0001583531\n",
        "..\n"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,19 +769,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
-   "id": "8f94119f",
+   "execution_count": 167,
+   "id": "a9a027e7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "/Gereral single word input\n",
     "get_corrections:{\n",
     "    words_list: `$(edit_two_letters[x;1b]);\n",
     "    :(`prob xdesc select from probs_table where word in words_list)\n",
     "    };\n",
     "\n",
-    "\n",
+    "/ For sentence\n",
     "get_corrections_1:{\n",
-    "    words_list: `$(edit_two_letters[x;1b]);\n",
+    "    words_list: `$(edit_two_letters_1[x;1b]);\n",
     "    res:string ((exec word from (`prob xdesc select from probs_table where word in words_list))[0]);\n",
     "    /$[`$res = `;x;res];\n",
     "    :res\n",
@@ -783,8 +792,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
-   "id": "aeca9858",
+   "execution_count": 118,
+   "id": "93e61558",
    "metadata": {},
    "outputs": [
     {
@@ -792,11 +801,11 @@
       "text/plain": [
        "word  | prob        \n",
        "------| ------------\n",
-       "simple| 0.001108647 \n",
-       "simply| 0.0004751346\n"
+       "simple| 0.001108472 \n",
+       "simply| 0.0004750594\n"
       ]
      },
-     "execution_count": 347,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,8 +816,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
-   "id": "1787e17b",
+   "execution_count": 119,
+   "id": "f7e6f05e",
    "metadata": {},
    "outputs": [
     {
@@ -816,15 +825,15 @@
       "text/plain": [
        "word | prob        \n",
        "-----| ------------\n",
-       "i    | 0.2001901   \n",
-       "him  | 0.04339563  \n",
-       "image| 0.0006335128\n",
-       "aim  | 0.0004751346\n",
-       "big  | 0.0003167564\n",
-       "m    | 0.0001583782\n"
+       "i    | 0.2001584   \n",
+       "him  | 0.04338876  \n",
+       "image| 0.0006334125\n",
+       "aim  | 0.0004750594\n",
+       "big  | 0.0003167063\n",
+       "m    | 0.0001583531\n"
       ]
      },
-     "execution_count": 348,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,8 +845,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
-   "id": "2d1d3e70",
+   "execution_count": 120,
+   "id": "b165ee49",
    "metadata": {},
    "outputs": [
     {
@@ -845,10 +854,10 @@
       "text/plain": [
        "word  | prob       \n",
        "------| -----------\n",
-       "travel| 0.001108647\n"
+       "travel| 0.001108472\n"
       ]
      },
-     "execution_count": 350,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,13 +868,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
-   "id": "d0c1ddcd",
+   "execution_count": null,
+   "id": "715a42ca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "be8e3215",
    "metadata": {},
    "outputs": [],
    "source": [
     "/Let's add on sentence\n",
-    "sentenct_auto_correct:{\n",
+    "sentence_auto_correct:{\n",
     "    x: \" \" vs x;\n",
     "    x: (get_corrections_1'[x]);\n",
     "    x:(\" \" sv x);\n",
@@ -876,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee59fc8a",
+   "id": "22d216f0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -884,36 +901,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09733c74",
+   "id": "9f310499",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
-   "id": "135209ce",
+   "execution_count": 168,
+   "id": "bf52e891",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"welcome every no\"\n"
+       "\"welcome every one\"\n"
       ]
      },
-     "execution_count": 420,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sentenct_auto_correct \"welcme evry one\""
+    "sentence_auto_correct \"welcme evry one\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dad88fc1",
+   "id": "d3b4b02a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -921,7 +938,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3cb70c6",
+   "id": "e90aaef1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64a29394",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5f9d9c9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02494503",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5ef5352",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "555cd0a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "268714d9",
    "metadata": {},
    "outputs": [],
    "source": []
